--- a/frontend/app-frontend/src/App.css
+++ b/frontend/app-frontend/src/App.css
@@ -1,38 +1,40 @@
-.App {
+body {
+  background-color: #282c34;
+}
+#menu-bar {
+  background-color: #A9A9A9;
+  border-radius :5px;
+  min-height: 100vh;
+  width: 8vh;
+  padding-top: 20vh;
+  padding-bottom: 20vh;
+  position: fixed;
+  top:0;
+  left:0;
+}
+.menu-item{
+  padding-top:3vh;
+  padding-bottom:3vh;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.menu-item:hover{
+  background-color:  #282c34;
+  transition: 500ms;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.menu-item img{
+  width : 40%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+p{
+  text-align: center;
+  margin-left: 8vh;
+  color: #A9A9A9;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#container {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px;
+  margin-left: 8vh;
+  width: 95%;
+  height: 400px;
 }
