--- a/frontend/app-frontend/src/Admin.css
+++ b/frontend/app-frontend/src/Admin.css
@@ -3,6 +3,16 @@
     margin-top:3%;
 }
 
+form[id=code] {
+    width:100%;
+    padding: 30px;
+    border: 1px solid #8a8989;
+    background: rgba(56, 54, 66, 0.2);
+    box-shadow: 0 0 20px 0 rgba(167, 165, 165, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    border-radius: 10px;
+}
+
+
 form {
     width:100%;
     padding: 30px;
@@ -18,7 +28,7 @@ form {
     padding-bottom: 10px;
 }
 
-#container h3{
+#container h4{
     width: 100%;
     margin: 0 auto;
     padding-bottom: 10px;
@@ -36,9 +46,28 @@ input[type=text] {
 }
 
 /*Bouton Valider */
+input[id=codeB] {
+    width: 100%;
+    background-color:rgba(169,169,169, 0.4);
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+/* Bouton Valider quand on passe la souris dessus*/
+input[id=codeB]:hover {
+    background-color: white;
+    color: rgb(43,46,55);
+    border: 1px solid rgba(169,169,169, 0.4);
+}
+
+
+/*Bouton Envoyer */
 input[id=submit] {
     width: 100%;
-    background-color: rgba(0,0,0,0.6);
+    background-color:rgb(43,46,55);
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -49,6 +78,6 @@ input[id=submit] {
 /* Bouton Valider quand on passe la souris dessus*/
 input[id=submit]:hover {
     background-color: white;
-    color: rgba(0,0,0,0.6);
+    color: rgb(43,46,55);
     border: 1px solid rgba(0,0,0,0.6);
 }
