--- a/frontend/app-frontend/src/Ecologie.css
+++ b/frontend/app-frontend/src/Ecologie.css
@@ -6,6 +6,23 @@ h4 {
     color: #A9A9A9;
 }
 
+#blocFull{
+    height: 16em;
+    background-color:rgba(56, 54, 66, 0.2);
+    box-shadow: 0 0 20px 0 rgba(167, 165, 165, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    border: 2px solid #8a8989;
+    margin: 2%;
+    border-radius: 10px;
+}
+#blocHalf{
+    height: 14em;
+    background-color:rgba(56, 54, 66, 0.2);
+    box-shadow: 0 0 20px 0 rgba(167, 165, 165, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    border: 2px solid #8a8989;
+    margin: 3%;
+    border-radius: 10px;
+}
+
 @media screen and (min-width: 1025px) {
     svg[id=curseur] {
         width: 19em;
