--- a/frontend/app-frontend/src/App.css
+++ b/frontend/app-frontend/src/App.css
@@ -3,7 +3,6 @@ body {
 }
 #menu-bar {
   background-color: #A9A9A9;
-  border-radius :5px;
   min-height: 100vh;
   width: 8vh;
   padding-top: 20vh;
@@ -15,18 +14,17 @@ body {
 
 p{
   text-align: center;
-  margin-left: 8vh;
   color: #A9A9A9;
 }
 .button{
   background-color:#A9A9A9;
   border:none;
-  padding-top:3vh;
-  padding-bottom:3vh;
+  padding-top:2vh;
+  padding-bottom:2vh;
   text-align: center;
 }
 .button img{
-  width:80%;
+  width:60%;
 }
 .button:hover{
   background-color:  #282c34;
@@ -40,7 +38,13 @@ p{
   margin-left: 8vh;
   width: 95%;
   height: 400px;
+  border :solid b rgba(#000, .2);
 }
 .Barchart .Bar{
 color: blue;
+}
+.boxshadow{
+  border: 2px solid #8a8989;
+  box-shadow: 0 0 20px 0 rgba(167, 165, 165, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  border-radius: 10px;
 }
