--- a/frontend/app-frontend/src/App.css
+++ b/frontend/app-frontend/src/App.css
@@ -5,8 +5,9 @@ body {
   background-color: #A9A9A9;
   min-height: 100vh;
   width: 8vh;
-  padding-top: 20vh;
-  padding-bottom: 20vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   position: fixed;
   top:0;
   left:0;
