--- a/frontend/app-frontend/src/App.css
+++ b/frontend/app-frontend/src/App.css
@@ -33,20 +33,26 @@ p{
   transition: 500ms;
 }
 #container {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+  display: block;
   padding: 10px;
   margin-left: 8vh;
   width: 95%;
   height: 400px;
   border :solid b rgba(#000, .2);
 }
-.Barchart .Bar{
-color: blue;
-}
+
 .boxshadow{
   border: 2px solid #8a8989;
   box-shadow: 0 0 20px 0 rgba(167, 165, 165, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
   border-radius: 10px;
+}
+
+.containerGauche{
+  display: block;
+  justify-content: left;
+}
+
+.containerDroite {
+  justify-content: right;
+  display: block;
 }
