--- a/frontend/app-frontend/src/App.css
+++ b/frontend/app-frontend/src/App.css
@@ -45,6 +45,7 @@ p{
   border: 2px solid #8a8989;
   box-shadow: 0 0 20px 0 rgba(167, 165, 165, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
   border-radius: 10px;
+  width: 100p;
 }
 
 .containerGauche{
